# open_sync

./: .gitignore  CODEOWNERS  Makefile  README.md  run.sh
.antigravity/: mcp_config.json
.opencode/agents/: opensync-marketer.md
.wrangler/cache/: wrangler-account.json
backend/: agent_discovery.py  agent_registry.py  api.py  config_manager.py  config_targets.py  database.py  llm_provider_discovery.py  llm_provider_registry.py  main.py  mcp_registry_client.py  models.py  project_importer.py  project_registry.py  pyproject.toml  remote_sync.py  server_registry.py  skill_discovery.py  skill_registry.py  unified_targets.py  workflow_discovery.py  workflow_registry.py
backend/integrations/: __init__.py  aider.py  amp.py  antigravity.py  base.py  claude_code.py  claude_desktop.py  cline_vscode.py  continue_.py  copilot_cli.py  cursor.py  gemini_cli.py  jetbrains.py  kilocode_vscode.py  opencode.py  plandex.py  roo_cline.py  roocode_antigravity.py  vscode.py  warp.py  windsurf.py
backend/tests/: _helpers.py  test_api.py  test_config_manager.py  test_llm_provider_discovery.py  test_project_registry.py  test_remote_sync.py  test_server_registry.py
docs/: CONTRIBUTING_INTEGRATIONS.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  colors.js  index.css
frontend/src/components/: NavBar.jsx
frontend/src/components/cards/: AgentCard.jsx  LlmProviderCard.jsx  RegistryServerCard.jsx  (+4 more)
frontend/src/hooks/: useHashRoute.js
frontend/src/pages/: RegistryPage.jsx
marketing-site/: index.html  script.js  style.css
(+22 files in other folders)
